kubectl/service.yml
kind: Service
apiVersion: v1
metadata:
  name: training
  namespace: default
  labels:
    app: training
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
  selector:
    app: training
  sessionAffinity: None
